src/test/ui/object-lifetime/object-lifetime-default-dyn-binding-nonstatic3.stderr
warning: lifetime parameter `'a` never used
  --> $DIR/object-lifetime-default-dyn-binding-nonstatic3.rs:4:11
   |
LL | trait Foo<'a> {
   |          -^^- help: elide the unused lifetime
   |
   = note: `#[warn(unused_lifetimes)]` on by default

error[E0228]: the lifetime bound for this object type cannot be deduced from context; please supply an explicit bound
  --> $DIR/object-lifetime-default-dyn-binding-nonstatic3.rs:16:36
   |
LL | fn bar(x: &str) -> &dyn Foo<Item = dyn Bar> { &() }
   |                                    ^^^^^^^

error: aborting due to previous error

